# Claude-Screen-Recorder-Skill-Builder

./: .gitignore  README.md  pyproject.toml
recorders/browser-extension/: README.md  background.js  content.js  exporter.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js
src/csrsb/: __init__.py  builder.py  cli.py  installer.py  schema.py  server.py
src/csrsb/ingest/: __init__.py  browser.py  desktop.py  normalize.py
src/csrsb/recorders/desktop/: __init__.py  capture.py  redact.py  session.py
src/csrsb/translator/: __init__.py  claude_client.py  compress.py  pipeline.py  redact.py  segment.py
src/csrsb/translator/prompts/: label_step.py  secret_check.py  synthesize_skill.py
src/csrsb/translator/scripts/: __init__.py  generator.py
src/csrsb/translator/templates/: REDACTIONS.md.j2  SKILL.md.j2
tests/: conftest.py
tests/fixtures/recordings/browser_invoice/: recording.json
tests/fixtures/recordings/calculator/: recording.json
tests/integration/: test_browser_pipeline.py  test_pipeline.py  test_secret_check.py  test_server.py  test_with_script.py
tests/unit/: test_compress.py  test_ingest_browser.py  test_perceptual_hash.py  test_redact.py  test_replay_generator.py  test_schema.py  test_segment.py  test_validate.py
